updated, sdk 0.0.1 -> 0.0.2, added, sdk support to set neckband's wifi, added, neckband's wifi set api example

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".activity.setting.SettingLanguageSelectActivity" />
         <activity android:name=".activity.setting.SettingOthersActivity" />
         <activity android:name=".activity.setting.SettingOthersSelectActivity" />
+        <activity android:name=".activity.setting.SettingAPActivity" />
         <activity android:name=".activity.SettingActivity" />
         <activity android:name=".activity.BTListActivity" />
         <activity android:name=".activity.SpecActivity" />
